   * See also NetBSD changelog:
	http://cvsweb.netbsd.org/bsdweb.cgi/src/lib/libedit

2021-05-22 Jess Thrysoee

   * version-info: 0:66:0

   * all: sync with upstream source

   * src/el.c: editrc not read on systems without issetugid
	Patch by Trevor Cordes

2021-04-19 Jess Thrysoee

   * version-info: 0:65:0

   * all: sync with upstream source

   * src/getline.c,src/sys.h: Provide getline.c implementation if not available
	Patch by Claes Nästén

   * src/makelist: Use Posix locale; mainly to get ASCII character classes in e.g. `tr`
	Patch by Claes Nästén

  * examples/test_filecompletion.c, examples/wtc1.c: err.h not supported by
	Solaris

2021-02-16 Jess Thrysoee

   * version-info: 0:64:0

   * all: sync with upstream source

2019-12-31 Jess Thrysoee

   * version-info: 0:63:0

   * configure.ac: Support -ltinfo as split in newer ncurses
	The newer versions of ncurses support building terminfo routines as a split -ltinfo library.
	Patch by Michał Górny

2019-12-11 Jess Thrysoee

   * version-info: 0:62:0

   * all: sync with upstream source

2019-10-25 Jess Thrysoee

   * version-info: 0:61:0

   * all: sync with upstream source

2019-03-24 Jess Thrysoee

   * version-info: 0:60:0

   * all: sync with upstream source

2018-12-09 Jess Thrysoee

   * version-info: 0:59:0

   * all: sync with upstream source

2018-05-25 Jess Thrysoee

   * version-info: 0:58:0

   * all: sync with upstream source

2017-05-22 Jess Thrysoee

   * version-info: 0:57:0

   * all: sync with upstream source

   * libedit.pc.in: Ncurses should not be a part of public link interface.
	Patch by Yegor Timoshenko

2017-03-29 Jess Thrysoee

   * version-info: 0:56:0

   * all: sync with upstream source

2016-09-03 Jess Thrysoee

   * version-info: 0:55:0

   * all: sync with upstream source

2016-06-18 Jess Thrysoee

   * version-info: 0:54:0

   * all: sync with upstream source

   * deprecate option --enable-widec.
	Upstream now always build with unicode (wide-char/UTF-8) support.
